# End-To-End Distance Analyzer
add_library(AnalyzerEndToEndDistance MODULE AnalyzerEndToEndDistance.h)
# utility for calculating property statists
add_library(StatisticMoment MODULE StatisticMoment)
# Analyzer for calculating properties during constant force simulations
add_library(AnalyzerConstantForce MODULE AnalyzerConstantForce.h)
